--- a/Portfolio/src/styles/Footer.scss
+++ b/Portfolio/src/styles/Footer.scss
@@ -1,65 +1,80 @@
-footer{
+footer {
     position: fixed;
     background-color: rgb(0, 0, 68);
     width: 100%;
-    height: 30%;
+    height: 28vh;
     bottom: 0;
     left: 0;
 
-    
-
-    hr{
-        width: 90%;
+    h2{
+        margin-top: 8px;
     }
 
-    .redeSociais{
-        margin-top: 30px;
+    hr {
+        width: 90%;
+        margin-top: -10px;
+    }
+
+    .redeSociais {
+        margin-top: 3vh;
         display: flex;
         flex-direction: row;
         justify-content: center;
-        gap: 90px;
+        gap: 3.5vw;
 
-
-        a{
+        a {
             display: flex;
             flex-direction: column;
             border-radius: 20px;
             background-color: white;
-            padding: 0 20px 25px 20px;
-            width: 20em;
-            height: 8em;
+            padding: 0 5vw 5vh 5vw;
+            width: 15vw;
+            height: 9vh;
             transition-duration: 0.8s;
-    
-            img{
-                margin-top: 4.5%;
-                width: 3em;
-                margin-bottom: -10px;
+            margin-top: -0.5vw;
+
+            img {
+                margin-top: 1vh;
+                width: 2.5vw; /* Tamanho da imagem para computadores */
+                max-width: 100%;
+                height: auto;
+                margin-bottom: -2vh;
             }
 
-            p{
-                font-size: large;
-                margin-bottom: -10px;
+            p {
+                font-size: 2vh;
+                margin-bottom: -2vh;
             }
-            
-
         }
 
         a:hover {
             transform: scale(1.1);
             transition-duration: 0.8s;
-            box-shadow: 0 0 20px rgba(255, 255, 255); 
+            box-shadow: 0 0 2vh rgba(255, 255, 255);
         }
     }
-    
+
 }
 
 @media (max-width: 700px) {
 
-    footer{
-        .redeSociais{
-            gap: 1em;
-            p{
-                font-size: small;
+    footer {
+        .redeSociais {
+            gap: 1.5em;
+
+            a{
+                width: 18vw;
+                height: 9vh;
+            }
+
+            a p {
+                font-size: 1.5vh;
+                margin-top: 15px;
+            }
+
+            a img {
+                margin-top: 1vh;
+                width: 8vw; /* Tamanho da imagem para dispositivos móveis */
             }
         }
     }
