--- a/Portfolio/src/styles/Inicio.scss
+++ b/Portfolio/src/styles/Inicio.scss
@@ -1,6 +1,7 @@
 .inicio{
     position: fixed;
     width: 100%;
+    height: 67vh;
     top: 10vh;
     left: 0;
     background-color: #006494;
@@ -27,4 +28,32 @@
     .imagem{
         width: 20em;
     }
+}
+
+@media (max-width: 700px) {
+
+    .inicio {
+        top: 14vh;
+        display: block;
+        align-items: center;
+        justify-content: center;
+
+        .perfil {
+            align-items: center;
+            justify-content: center;
+            margin-left: 20%;
+        }
+
+        .perfil .nome {
+            font-size: 2em; /* Reduzindo o tamanho da fonte */
+            text-align: center; /* Centralizando o texto */
+            margin-bottom: 0; /* Removendo o ajuste negativo */
+        }
+
+        .perfil .cargo {
+            font-size: 1.5em; /* Reduzindo o tamanho da fonte */
+            text-align: center; /* Centralizando o texto */
+        }
+    }
+
 }
