--- a/Portfolio/src/styles/Footer.scss
+++ b/Portfolio/src/styles/Footer.scss
@@ -1,5 +1,5 @@
 footer {
-    position: fixed;
+    
     background-color: rgb(0, 0, 68);
     width: 100%;
     height: 28vh;
@@ -29,7 +29,7 @@ footer {
             background-color: white;
             padding: 0 5vw 5vh 5vw;
             width: 15vw;
-            height: 9vh;
+            height: 9.7vh;
             transition-duration: 0.8s;
             margin-top: -0.5vw;
 
@@ -43,7 +43,7 @@ footer {
 
             p {
                 font-size: 2vh;
-                margin-bottom: -2vh;
+                margin-bottom: -1.5vh;
             }
         }
 
@@ -59,22 +59,25 @@ footer {
 @media (max-width: 700px) {
 
     footer {
+        padding-left: 1.22em;
         .redeSociais {
-            gap: 1.5em;
+            gap: 0.8em;
+            margin-left: -30px;
 
             a{
-                width: 18vw;
-                height: 9vh;
+                width: 20vw;
+                height: 10vh;
             }
 
             a p {
-                font-size: 1.5vh;
-                margin-top: 15px;
+                font-size: 1.8vh;
+                margin-top: 24px;
+                margin-bottom: -2vh;
             }
 
             a img {
                 margin-top: 1vh;
-                width: 8vw; /* Tamanho da imagem para dispositivos móveis */
+                width: 9vw; /* Tamanho da imagem para dispositivos móveis */
             }
         }
     }
