--- a/Portfolio/src/styles/Inicio.scss
+++ b/Portfolio/src/styles/Inicio.scss
@@ -1,5 +1,5 @@
 .inicio{
-    position: fixed;
+    
     width: 100%;
     height: 67vh;
     top: 10vh;
@@ -37,17 +37,20 @@
         display: block;
         align-items: center;
         justify-content: center;
+        margin-top: -21.5px;
+        padding-left: 1.22em;
 
         .perfil {
             align-items: center;
             justify-content: center;
-            margin-left: 20%;
+            margin-left: 10%;
         }
 
         .perfil .nome {
-            font-size: 2em; /* Reduzindo o tamanho da fonte */
-            text-align: center; /* Centralizando o texto */
-            margin-bottom: 0; /* Removendo o ajuste negativo */
+            font-size: 2em; 
+            text-align: center; 
+            margin-bottom: 0; 
+            padding-top: 2em;
         }
 
         .perfil .cargo {
