--- a/Portfolio/src/styles/Sobre.scss
+++ b/Portfolio/src/styles/Sobre.scss
@@ -2,7 +2,7 @@
     
     background-color: rgb(0, 0, 68);
     width: 100%;
-    height: 60vh;
+    height: 65vh;
     left: 0;
     display: block;
     align-items: center;
@@ -10,10 +10,11 @@
     margin-top: -20px;
 
     h2{
-        padding-top: 2em;
+        padding-top: 3vh;
     }
 
     hr{
+      margin-top: -2vh;
         width: 45%;
     }
 
@@ -21,25 +22,30 @@
         display: flex;
 
         .minhaFoto{
-            margin-left: 27%;
+            margin-left: 20%;
             margin-right: 5em;
-            width: 22em;
-            height: 24em;
+            width: 20vw;
+            height: 40vh;
             border-radius: 2em;
         }
 
         .blocoTexto{
+          margin-top: -4vh;
             display: block;
-            width: 26vw;
+            width: 30vw;
+
+            h3{
+              font-size: 4vh;
+            }
             
             p{
                 margin-top: 2rem;
                 text-align: justify;
                 line-height: 2em;
-
+                font-size: 2.1vh;
                 // Primeira palavra em verde
                 .strong-green {
-                    color: rgb(8, 92, 0);
+                    color: rgb(20, 212, 3);
                 }
                 
                 // Segunda palavra em azul piscina claro
@@ -49,7 +55,7 @@
                 
                 // Terceira palavra em roxo escuro
                 .strong-dark-purple {
-                    color: rgb(146, 45, 218);
+                    color: rgb(169, 58, 248);
                 }  
             }
         }
@@ -62,37 +68,37 @@
       height: 75vh; /* Diminuir a altura */
       margin-top: -26px; /* Ajustar a margem superior */
   
-      h2 {
-        font-size: 1.8em; /* Diminuir o tamanho da fonte do h2 */
-        padding-top: 1em; /* Ajustar o espaçamento superior */
-        margin-bottom: -10px;
-      }
-  
-      hr {
-        width: 60%; /* Ajustar a largura da linha */
-      }
-  
-      .bloco {
-        flex-direction: column; /* Mudar para layout de coluna */
-        align-items: center; /* Centralizar itens */
-        text-align: center; /* Centralizar texto */
-  
-        .minhaFoto {
-          width: 10em; /* Diminuir o tamanho da imagem */
-          height: 11em;
-          margin: 0; /* Remover margens laterais */
-          margin-bottom: -2em; /* Adicionar margem inferior */
+        h2 {
+          font-size: 1.8em; /* Diminuir o tamanho da fonte do h2 */
+          padding-top: 1em; /* Ajustar o espaçamento superior */
+          margin-bottom: -10px;
         }
-  
-        .blocoTexto {
-          width: 80%; /* Ajustar a largura do bloco de texto */
-  
-          p {
-            font-size: 0.9em; /* Diminuir o tamanho da fonte do parágrafo */
-            line-height: 1.5em; /* Ajustar o espaçamento entre linhas */
+    
+        hr {
+          width: 60%; /* Ajustar a largura da linha */
+        }
+    
+        .bloco {
+          flex-direction: column; /* Mudar para layout de coluna */
+          align-items: center; /* Centralizar itens */
+          text-align: center; /* Centralizar texto */
+    
+          .minhaFoto {
+            width: 10em; /* Diminuir o tamanho da imagem */
+            height: 11em;
+            margin: 0; /* Remover margens laterais */
+            margin-bottom: -2em; /* Adicionar margem inferior */
+          }
+    
+          .blocoTexto {
+            width: 80%; /* Ajustar a largura do bloco de texto */
+    
+              p {
+                font-size: 0.9em; /* Diminuir o tamanho da fonte do parágrafo */
+                line-height: 1.5em; /* Ajustar o espaçamento entre linhas */
+              }
           }
         }
-      }
     }
   }
   
