--- a/Portfolio/src/index.css
+++ b/Portfolio/src/index.css
@@ -1,10 +1,9 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #f7f7f7;
+  background-color: #000000;
 }
 
 a {
