--- a/Portfolio/src/styles/Footer.scss
+++ b/Portfolio/src/styles/Footer.scss
@@ -1,4 +1,4 @@
-footer {
+#contatos{
     
     background-color: rgb(0, 0, 68);
     width: 100%;
@@ -58,9 +58,11 @@ footer {
 
 @media (max-width: 700px) {
 
-    footer {
+    #contatos {
+
         .redeSociais {
             gap: 0.8em;
+                
 
             a{
                 width: 20vw;
@@ -75,7 +77,7 @@ footer {
 
             a img {
                 margin-top: 1vh;
-                width: 9vw; /* Tamanho da imagem para dispositivos móveis */
+                width: 9vw; 
             }
         }
     }
