--- a/Portfolio/src/styles/Inicio.scss
+++ b/Portfolio/src/styles/Inicio.scss
@@ -1,7 +1,7 @@
 #inicio{
     
     width: 100%;
-    height: 67vh;
+    height: 79vh;
     top: 10vh;
     left: 0;
     background-color: #006494;
@@ -32,7 +32,7 @@
 
 @media (max-width: 700px) {
 
-    .inicio {
+    #inicio {
         top: 14vh;
         display: block;
         align-items: center;
@@ -40,21 +40,23 @@
         margin-top: -21.5px;
 
         .perfil {
-            align-items: center;
-            justify-content: center;
-            margin-left: 20%;
+            width: 100%;
+
+            .nome {
+                font-size: 2em; 
+                text-align: center; 
+                margin-bottom: 0; 
+                padding-top: 2em;
+            }
+
+            .cargo {
+                font-size: 1.5em; 
+                text-align: center;
+            }
         }
 
-        .perfil .nome {
-            font-size: 2em; 
-            text-align: center; 
-            margin-bottom: 0; 
-            padding-top: 2em;
-        }
-
-        .perfil .cargo {
-            font-size: 1.5em; /* Reduzindo o tamanho da fonte */
-            text-align: center; /* Centralizando o texto */
+        .imagem{
+            width: 66.27vw;
         }
     }
 
