--- a/Portfolio/src/styles/Sobre.scss
+++ b/Portfolio/src/styles/Sobre.scss
@@ -2,15 +2,16 @@
     
     background-color: rgb(0, 0, 68);
     width: 100%;
-    height: 65vh;
+    height: 67vh;
     left: 0;
     display: block;
     align-items: center;
     justify-content: center;
-    margin-top: -20px;
+    margin-top: -22.5px;
 
     h2{
         padding-top: 3vh;
+        font-size: 4vh;
     }
 
     hr{
@@ -62,12 +63,12 @@
 
 @media (max-width: 700px) {
 
-    .sobre {
+    #sobre {
       height: 75vh; 
       margin-top: -26px; 
   
         h2 {
-          font-size: 1.8em; 
+          font-size: 1.8rem; 
           padding-top: 1em; 
           margin-bottom: -10px;
         }
@@ -84,12 +85,15 @@
           .minhaFoto {
             width: 10em; 
             height: 11em;
-            margin: 0; 
-            margin-bottom: -2em; 
           }
     
           .blocoTexto {
             width: 80%;
+
+              h3{
+                margin-top: 45px;
+                font-size: 1.5rem;
+              }
     
               p {
                 font-size: 0.9em; 
