--- a/Portfolio/src/styles/Sobre.scss
+++ b/Portfolio/src/styles/Sobre.scss
@@ -2,7 +2,7 @@
     
     background-color: rgb(0, 0, 68);
     width: 100%;
-    height: 69vh;
+    height: 75vh;
     left: 0;
     display: block;
     align-items: center;
@@ -23,17 +23,17 @@
         display: flex;
 
         .minhaFoto{
-            margin-left: 20%;
-            margin-right: 5em;
+            margin-left: 18%;
+            margin-right: 6.5em;
             width: 20vw;
             height: 45vh;
             border-radius: 2em;
         }
 
-        .blocoTexto{
-          margin-top: -4vh;
+        .info{
+            margin-top: -4vh;
             display: block;
-            width: 30vw;
+            width: 35vw;
 
             h3{
               font-size: 4vh;
@@ -43,7 +43,7 @@
                 margin-top: 2rem;
                 text-align: justify;
                 line-height: 2em;
-                font-size: 2.1vh;
+                font-size: 2vh;
                 
                 .strong-green {
                     color: rgb(20, 212, 3);
@@ -57,6 +57,34 @@
                     color: rgb(169, 58, 248);
                 }  
             }
+
+            
+            .linguagensTitulo{
+              margin: 0 0 2vh 30%;
+              font-size: 1.4em;
+              font-weight: bolder;
+              color: green;
+              
+            }
+            .linguagens{
+              background-color: rgb(255, 255, 255);
+              border-radius: 8px;
+              padding-top: 20px;
+              margin-left: -11%;
+              width: 100%;
+              height: 6vh;
+              display: flex;
+              align-items: center;
+              place-content: center;
+              gap: 5px;
+
+              img{
+                -webkit-text-stroke: 25px rgb(199, 0, 0);
+                margin-top: -10px;
+                width: 3.8vw;
+                height: 8vh;
+              }
+            }
         }
     }
 }
@@ -64,7 +92,7 @@
 @media (max-width: 700px) {
 
     #sobre {
-      height: 75vh; 
+      height: 88vh; 
       margin-top: -26px; 
   
         h2 {
@@ -87,7 +115,7 @@
             height: 11em;
           }
     
-          .blocoTexto {
+          .info {
             width: 80%;
 
               h3{
@@ -99,6 +127,40 @@
                 font-size: 0.9em; 
                 line-height: 1.5em; 
               }
+
+
+              .linguagensTitulo{
+                font-size: 1.5em;
+                margin-left: 20px;
+                font-weight: bolder;
+                color: green;
+                
+              }
+              .linguagens{
+                background-color: rgb(255, 255, 255);
+                border-radius: 8px;
+                padding-top: 20px;
+                margin-left: -18px;
+                width: 100%;
+                height: 5vh;
+                display: flex;
+                align-items: center;
+                place-content: center;
+                gap: 0px;
+  
+                img{
+                  -webkit-text-stroke: 25px rgb(199, 0, 0);
+                  margin-top: -10px;
+                  width: 8.9vw;
+                  height: 5vh;
+                }
+              }  
+          }
+
+          .linguagens{
+            transform: translate(-4%);
+
+            
           }
         }
     }
