--- a/Portfolio/src/styles/Sobre.scss
+++ b/Portfolio/src/styles/Sobre.scss
@@ -140,19 +140,20 @@
                 background-color: rgb(255, 255, 255);
                 border-radius: 8px;
                 padding-top: 20px;
-                margin-left: -18px;
-                width: 100%;
-                height: 5vh;
+                margin-left: -20px;
+                height: 4vh;
                 display: flex;
                 align-items: center;
                 place-content: center;
-                gap: 0px;
+                gap: 4px;
   
                 img{
                   -webkit-text-stroke: 25px rgb(199, 0, 0);
                   margin-top: -10px;
-                  width: 8.9vw;
-                  height: 5vh;
+                  width: 8vw;
+                  height: 4.8vh;
+                  border: 0.5px solid black;
+                  border-radius: 5px;
                 }
               }  
           }
