--- a/Portfolio/src/styles/Projetos.scss
+++ b/Portfolio/src/styles/Projetos.scss
@@ -4,4 +4,48 @@
     height: 90vh;
     bottom: 0;
     left: 0;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    margin-top: -26px;
+
+    h2{
+        padding-top: 3vh;
+        font-size: 4vh;
+    }
+
+    hr{
+      margin-top: -2vh;
+      width: 45%;
+    }
+
+    .conteudo{
+
+    }
 }
+
+
+@media (max-width: 700px) {
+
+    #projetos{
+      height: 88vh; 
+      margin-top: -26px; 
+  
+        h2 {
+          font-size: 1.8rem; 
+          padding-top: 1em; 
+          margin-bottom: -10px;
+        }
+    
+        hr {
+          width: 70%; 
+        }
+    
+        .bloco {
+          flex-direction: column; 
+          align-items: center; 
+          text-align: center; 
+        }
+    }
+  }
+  
