--- a/Portfolio/src/styles/Sobre.scss
+++ b/Portfolio/src/styles/Sobre.scss
@@ -27,7 +27,8 @@
             margin-right: 6.5em;
             width: 20vw;
             height: 45vh;
-            border-radius: 2em;
+            border-radius: 10px 40px;
+            box-shadow: 4px 4px rgb(255, 255, 255);
         }
 
         .info{
@@ -76,20 +77,27 @@
               display: flex;
               align-items: center;
               place-content: center;
-              gap: 5px;
+              gap: 8px;
 
               img{
                 -webkit-text-stroke: 25px rgb(199, 0, 0);
                 margin-top: -10px;
                 width: 3.8vw;
                 height: 8vh;
+                transition: width 0.5s, height 0.5s;
+              }
+
+              img:hover{
+                z-index: 9999;
+                width: 5vw;
+                height: 10vh;
               }
             }
         }
     }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 767px) {
 
     #sobre {
       height: 88vh; 
@@ -132,36 +140,47 @@
               .linguagensTitulo{
                 font-size: 1.5em;
                 margin-left: 20px;
+                margin-bottom: -2px;
                 font-weight: bolder;
-                color: green;
-                
+                color: green;              
               }
+
               .linguagens{
                 background-color: rgb(255, 255, 255);
                 border-radius: 8px;
                 padding-top: 20px;
-                margin-left: -20px;
+                margin-left: -18px;
                 height: 4vh;
+                width: 6vw;
                 display: flex;
                 align-items: center;
                 place-content: center;
                 gap: 4px;
   
-                img{
-                  -webkit-text-stroke: 25px rgb(199, 0, 0);
+                img {
                   margin-top: -10px;
                   width: 8vw;
                   height: 4.8vh;
                   border: 0.5px solid black;
                   border-radius: 5px;
+                  transition: width 0.8s ease-out, height 0.8s ease-out;
+                  animation: scaleAnimation 5s infinite;
                 }
-              }  
+                
+                img:hover {
+                  width: 9.5vw;
+                  height: 7vh;
+                  transition: width 0.8s ease-out, height 0.8s ease-out;
+                }
+                
+                
+                
+                
+              } 
           }
 
           .linguagens{
-            transform: translate(-4%);
-
-            
+            transform: translate(-4.5%);
           }
         }
     }
