--- a/Portfolio/src/styles/Projetos.scss
+++ b/Portfolio/src/styles/Projetos.scss
@@ -1,56 +1,83 @@
-#projetos{
-    background-color: #006494;
-    width: 100%;
-    height: 95vh;
-    bottom: 0;
-    left: 0;
-    display: block;
-    align-items: center;
-    justify-content: center;
-    margin-top: -26px;
+#projetos {
+  background-color: #006494;
+  width: 100%;
+  height: 130vh;
+  bottom: 0;
+  left: 0;
+  display: block;
+  align-items: center;
+  justify-content: center;
+  margin-top: -26px;
 
-    h2{
-        padding-top: 3vh;
-        font-size: 4vh;
-    }
+  h2 {
+      padding-top: 3vh;
+      font-size: 4vh;
+  }
 
-    hr{
+  hr {
       margin-top: -2vh;
       width: 45%;
-    }
+  }
 
-    .conteudo{
+  .conteudo {
       margin-top: -1%;
-      width: 100%;
+      width: 95%;
+      margin-left: 35px;
       height: 80vh;
-      margin: flex;
-      flex: wrap;
-      flex-direction: row;
-    }
-}
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+      align-items: center; 
+      justify-content: center;
 
+      .blocos {
+          background-color: rgb(255, 255, 255);
+          flex-direction: column; 
+          border-radius: 28px;
+          width: 22vw;
+          height: 50vh;
+          color: black;
 
-@media (max-width: 767px) {
+          img {
+              width: 22vw;
+              height: 30vh;
+              border-radius: 10px 10px 0px 0px;
+          }
+      }
+  }
 
-    #projetos{
-      height: 88vh; 
+  @media (max-width: 767px) {
+      height: 280vh; 
       margin-top: -26px; 
-  
-        h2 {
+
+      h2 {
           font-size: 1.8rem; 
           padding-top: 1em; 
           margin-bottom: -10px;
-        }
-    
-        hr {
+      }
+
+      hr {
           width: 70%; 
-        }
-    
-        .bloco {
-          flex-direction: column; 
-          align-items: center; 
-          text-align: center; 
-        }
-    }
+      }
+
+      .conteudo {
+          margin-top: -13px;
+          width: 100%;
+          margin-left: 0;
+          height: 95%;
+          display: flex;
+          flex-wrap: wrap;
+
+          .blocos {
+              background-color: rgb(255, 255, 255);
+              width: 80%; /* Defina a largura dos blocos para 48% para caberem dois por linha */
+              height: 50vh; /* Defina a altura para 'auto' para ajustar conforme o conteúdo */
+              
+              img {
+                  width: 100%;
+                  height: auto;
+              }
+          }
+      }
   }
-  
+}
