--- a/Portfolio/src/styles/Sobre.scss
+++ b/Portfolio/src/styles/Sobre.scss
@@ -87,6 +87,7 @@
                 height: 8vh;
                 transition: width 0.5s, height 0.5s;
                 box-shadow: 0 0 0 1 white;
+                filter: drop-shadow(0px 0px 1px rgb(118, 119, 119));
                 border-radius: 7px;
               }
 
