style: :art: formatação de estilização

--- a/Portfolio/src/index.css
+++ b/Portfolio/src/index.css
@@ -3,7 +3,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #fdfdfd;
+  background-color: rgb(0,0,68);
 }
 
 a {
