style: :iphone: ajuste de responsividade do header

--- a/Portfolio/src/styles/Header.scss
+++ b/Portfolio/src/styles/Header.scss
@@ -1,33 +1,32 @@
 header {
   position: sticky;
-    background-color: rgba(0, 0, 68,0.92);
-    background: transparent blue;
-    height: 10vh;
-    top: 0;
-    left: 0;
+  background-color: rgba(0, 0, 68,0.92);
+  background: transparent blue;
+  height: 10vh;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  z-index: 1000;
+
+  .logo {
+    margin-left: 3rem;
+    max-width: 7vh;     
+    border-radius: 0.5rem;
+  }
+
+  .botoesCabecalho {
+    margin-left: auto;
+    margin-right: 2rem;
     display: flex;
-    align-items: center;
-    z-index: 1000;
+    flex-direction: row;
+    gap: 1vw;
+    height: 7vh;
 
-    .logo {
-      margin-left: 3rem;
-      max-width: 7vh; /* Ajuste o tamanho máximo da imagem conforme necessário */
-      color: blue;
-      border-radius: 2rem;
+    button{
+      width: 150px;
     }
-
-    .botoesCabecalho {
-      margin-left: auto;
-      margin-right: 2rem;
-      display: flex;
-      flex-direction: row;
-      gap: 5vw;
-      height: 7vh;
-
-      button{
-        width: 150px;
-      }
-    }
+  }
   }
   
   @media (max-width: 767px) {
@@ -35,27 +34,30 @@ header {
     header {
         height: auto;
         padding: 10px; 
+        display: flex;        
         flex-direction: column;
         align-items: center; 
-      }
+        
+    }
     
-      .logo {
-        height: 5vh;
-        margin-top: 25px;
-        margin-bottom: -25px;
-        margin-left: 40%;
-        transform: translate(-50%,-50%);
-        border-radius: 0;
-      }
+    .logo {
+      height: 5vh;
+      margin-top: 25px;
+      margin-bottom: -25px;
+      transform: translate(-50%,-50%);
+      border-radius: 0;
+    }
     
-      .botoesCabecalho {
-        align-items: center;
-        gap: 0.2em; 
-        width: 97%; 
-      }
+    .botoesCabecalho {
+      align-items: center;         
+      width: 100%; 
 
-      .botoesCabecalho:last-child{
-        margin-right: 25px;
+      button{
+        flex-grow: 1;
+        flex-basis: 0;
+        max-width: 25%; 
+        text-align: center;
+        padding: 10px;
       }
-
+    }
   }
