--- a/Portfolio/src/styles/Sobre.scss
+++ b/Portfolio/src/styles/Sobre.scss
@@ -1,7 +1,6 @@
 #sobre{
-    
     background-color: rgb(0, 0, 68);
-    width: 100%;
+    width: 100%;    
     height: 78vh;
     left: 0;
     display: block;
@@ -107,7 +106,7 @@
 @media (max-width: 767px) {
 
     #sobre {
-      height: 88vh; 
+      height: auto; 
       margin-top: -26px; 
   
         h2 {
