--- a/Portfolio/src/styles/Projetos.scss
+++ b/Portfolio/src/styles/Projetos.scss
@@ -34,12 +34,12 @@
           background-color: rgb(255, 255, 255);
           flex-direction: column; 
           border-radius: 28px;
-          width: 22vw;
+          width: 25vw;
           height: 50vh;
           color: black;
 
           img {
-              width: 22vw;
+              width: 100%;
               height: 30vh;
               border-radius: 10px 10px 0px 0px;
           }
@@ -76,7 +76,6 @@
 
               img {
                   width: 100%;
-                  height: auto;
               }
           }
       }
