--- a/Portfolio/src/styles/Projetos.scss
+++ b/Portfolio/src/styles/Projetos.scss
@@ -42,7 +42,6 @@
           border: 1px solid rgb(0, 0, 68);
           box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.5); /* sombra azul escuro com desfoque */
 
-
           img {
               width: 100%;
               height: 35vh;
@@ -52,6 +51,10 @@
           button{
             margin-bottom: 15px;
           }
+      }
+
+      .blocos:hover{
+        scale: 1.03;
       }
   }
 
