--- a/Portfolio/src/styles/Projetos.scss
+++ b/Portfolio/src/styles/Projetos.scss
@@ -40,11 +40,14 @@
         color: rgb(255, 255, 255);
         font-weight: bold;
         border: 1px solid rgb(0, 0, 68);
-        box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.5); /* sombra azul escuro com desfoque */
-        transition: transform 0.6s ease; /* Adicionando uma transição para suavizar a animação */
+        box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.5); 
+        transition: transform 0.6s ease; 
+        display: flex;
+        align-items: center; 
+        justify-content: center;
     
         .botao, h3, p, a {
-            transition: opacity 0.6s ease; /* Adicionando transição para a opacidade */
+            transition: opacity 0.6s ease; 
         }
     
         img {
@@ -52,12 +55,18 @@
             height: 35vh;
             border-radius: 10px 10px 0px 0px;
         }
+
+        .desc{
+            width: 90%;
+        }
     
         button {
             margin-bottom: 15px;
         }
     
         .conteudoOculto {
+            width: 100%;
+            height: 100%;
             display: none;
         }
     
@@ -76,11 +85,12 @@
 
             .conteudoOculto {
                 display: block; 
+
                 img, p, button {
                     transform: rotateY(180deg);
                 }
 
-                img{
+                img{                    
                     width: 100%;
                     height: 50vh;
                     opacity: 0.15;
@@ -90,8 +100,9 @@
                 p{
                     margin-top: -40%;
                     margin-left: 15%;
-                    font-size: 23px;
-                    width: 70%;
+                    margin-bottom: 35px;
+                    font-size: 25px;
+                    width: 75%;
                     text-align: justify;
                     hyphens: auto;
                 }
@@ -140,7 +151,7 @@
                     margin-top: -100%;
                     width: 90%;
                     font-weight: bolder;
-                    font-size: 18px;
+                    font-size: 17px;
                 }
               }
           }
