--- a/Portfolio/src/styles/Header.scss
+++ b/Portfolio/src/styles/Header.scss
@@ -9,11 +9,27 @@ header {
   align-items: center;
   z-index: 1000;
 
-  .logo {
-    margin-left: 3rem;
-    max-width: 7vh;     
-    border-radius: 0.5rem;
+  a{
+    display: flex;
+    align-items: center;
+    justify-content: center;        
+    height: 80%;
+
+    .logo {
+      margin-left: 3rem;
+      margin-right: 10px;
+      max-width: 7vh;           
+      border-radius: 0.5rem;
+    }
+
+    p{
+      color: rgb(255, 255, 255);
+      font-weight: bolder;
+      font-size: 20px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
   }
+
 
   .botoesCabecalho {
     margin-left: auto;
