--- a/Portfolio/src/styles/Projetos.scss
+++ b/Portfolio/src/styles/Projetos.scss
@@ -29,7 +29,8 @@
       flex-wrap: wrap;
       gap: 30px;
       align-items: center; 
-      justify-content: center;
+      justify-content: center;      
+
 
       .blocos {
         background-color: #000044;
@@ -45,12 +46,14 @@
         display: flex;
         align-items: center; 
         justify-content: center;
+
+        
     
         .botao, h3, p, a {
             transition: opacity 0.6s ease; 
         }
     
-        img {
+        .capa {
             width: 100%;
             height: 35vh;
             border-radius: 10px 10px 0px 0px;
@@ -62,7 +65,13 @@
     
         button {
             margin-bottom: 15px;
+        }           
+                
+        .seta{                                       
+            position: fixed;
+            right: 15px;
         }
+        
     
         .conteudoOculto {
             width: 100%;
@@ -86,11 +95,11 @@
             .conteudoOculto {
                 display: block; 
 
-                img, p, button {
+                .imgCapa, p, button {
                     transform: rotateY(180deg);
                 }
 
-                img{                    
+                .imgCapa{                    
                     width: 100%;
                     height: 50vh;
                     opacity: 0.15;
@@ -98,17 +107,15 @@
                 }
 
                 p{
-                    margin-top: -40%;
+                    margin-top: -60%;
                     margin-left: 15%;
-                    margin-bottom: 35px;
-                    font-size: 25px;
+                    margin-bottom: 25px;
+                    font-size: 18px;
                     width: 75%;
                     text-align: justify;
                     hyphens: auto;
                 }
-            }
-           
-            
+            }                    
         }
     }
     
@@ -135,14 +142,19 @@
           height: 95%;
           display: flex;
           flex-wrap: wrap;
-          
-
+        
           .blocos {              
               width: 80%;              
               margin-bottom: 10px;
 
               img {
                   width: 100%;
+              }
+
+              .seta{                                             
+                position: fixed;
+                right: 25px;
+                width: 2.5rem;
               }
 
               &.flipped .conteudoOculto {
@@ -152,6 +164,12 @@
                     width: 90%;
                     font-weight: bolder;
                     font-size: 17px;
+                }
+
+                .seta{                                             
+                    position: fixed;
+                    right: 5px;
+                    width: 2.5rem;
                 }
               }
           }
