style: :art: ajuste de qualidade de imagem

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -46,6 +46,7 @@ header {
     button{
       width: 150px;
       background-color: transparent;
+      color: rgb(255, 255, 255);
     }
   }
   }
@@ -92,6 +93,7 @@ header {
         max-width: 28%; 
         text-align: center;
         padding: 10px;
+        color: rgb(255, 255, 255);
       }
     }
   }
