style: :art: ajuste de cor do texto dos botoes de projetos

--- a/src/styles/Projetos.scss
+++ b/src/styles/Projetos.scss
@@ -65,6 +65,7 @@
     
         button {
             margin-bottom: 15px;
+            color: white;
         }           
                 
         .seta{                                       
