feat: :sparkles: implementar sistema administrativo para gestão dinâmica de projetos no portfólio com autenticação, cadastro via formulário e armazenamento persistente
Implementação de um sistema administrativo completo para gerenciamento do portfólio, permitindo autenticação de usuário antes do acesso à área de administração, cadastro de novos projetos por meio de formulário estruturado e armazenamento persistente das informações. O portfólio passa a exibir os projetos de forma dinâmica, substituindo o conteúdo estático anterior por dados recuperados automaticamente do sistema de armazenamento, incluindo suporte ao upload e vinculação de imagens aos registros dos projetos.

--- a/src/styles/Inicio.scss
+++ b/src/styles/Inicio.scss
@@ -36,10 +36,10 @@
         align-items: center;
         justify-content: center;
         margin-top: -21.5px;
+        
 
         .perfil{
             width: 100%;
-
             .nome{
                 font-size: 2em; 
                 text-align: center; 
@@ -53,6 +53,12 @@
             }
         }
 
-        
+        .imagem{
+            width: 19em;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 2em;
+        }
     }
 }
