--- a/src/styles/Sobre.scss
+++ b/src/styles/Sobre.scss
@@ -10,11 +10,14 @@
     h2{
         padding-top: 3vh;
         font-size: 4vh;
+        text-align: center;
     }
 
     hr{
       margin-top: -2vh;
         width: 45%;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .bloco{
