--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,5 +1,4 @@
 #contatos {
-    
     background-color: rgb(0, 0, 68);
     width: 100%;
     height: 28vh;
@@ -8,6 +7,7 @@
 
     h2 {
         margin-top: 8px;
+        text-align: center;
     }
 
     hr {
@@ -21,36 +21,38 @@
         flex-direction: row;
         justify-content: center;
         gap: 3.5vw;
+        align-items: stretch;
 
         a {
             display: flex;
             flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
             border-radius: 20px;
             background-color: white;
-            padding: 0 5vw 5vh 5vw;
+            padding: 2vh 1.5vw;
             width: 20%;
-            height: auto;
+            min-height: 10vh;
             transition-duration: 0.8s;
-            margin-top: -0.5vw;
-            margin-bottom: 10px;
+            margin: 0;
             position: relative;
 
             img {
-                margin-top: 1vh;
-                width: 2.5vw; 
+                margin: 0 0 0.5vh 0;
+                width: 3.5vw; 
                 max-width: 100%;
                 height: auto;
-                margin-bottom: -2vh;
             }
 
             p {
                 font-size: 2vh;
-                margin-bottom: -1.5vh;
+                margin: 0.2vh 0 0 0;
             }
         }
 
         a:hover {
-            transform: scale(1.1);
+            transform: scale(1.05);
             transition-duration: 0.8s;
             box-shadow: 0 0 2vh rgba(255, 255, 255);
         }
@@ -89,16 +91,16 @@
             a {
                 width: 25%;
                 height: auto;
+                padding: 1.5vh 0.5vw;
             }
 
             a p {
                 font-size: 1.5vh;
-                margin-top: 24px;
-                margin-bottom: -2vh;
+                margin: 0.2vh 0 0 0;
             }
 
             a img {
-                margin-top: 1vh;
+                margin: 0;
                 width: 9vw; 
             }
         }
